@@ -1,5 +1,11 @@
 2004-11-21 Braden McDaniel  <braden@endoframe.com>
 
+	* mozilla-plugin/src/openvrml.cpp:  Removed attempt at factoring
+	out platform-specific code using template specialization.  As
+	far as I can tell, it can't work.
+
+2004-11-21 Braden McDaniel  <braden@endoframe.com>
+
 	* openvrml.spec.in:  Changed openvrml-gl-devel dependency on
 	XFree86-devel to xorg-X11-devel.  Removed openvrml-mozilla
 	dependency on mozilla.  Other browsers (e.g., Firefox) could use
